--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "express-brute": "^1.0.1",
+    "express-brute-redis": "^0.0.1",
     "express-handlebars": "^3.1.0",
     "ioredis": "^4.16.1",
     "jsonwebtoken": "^8.5.1",
