--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express-brute": "^1.0.1",
     "express-brute-redis": "^0.0.1",
     "express-handlebars": "^3.1.0",
+    "helmet": "^3.22.0",
     "ioredis": "^4.16.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
