--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express-brute": "^1.0.1",
     "express-brute-redis": "^0.0.1",
     "express-handlebars": "^3.1.0",
+    "express-rate-limit": "^5.1.1",
     "helmet": "^3.22.0",
     "ioredis": "^4.16.1",
     "jsonwebtoken": "^8.5.1",
@@ -28,6 +29,8 @@
     "nodemailer-express-handlebars": "^3.1.0",
     "pg": "^7.17.1",
     "pg-hstore": "^2.3.3",
+    "rate-limit-redis": "^1.7.0",
+    "redis": "^3.0.2",
     "sequelize": "^5.21.3",
     "youch": "^2.0.10",
     "yup": "^0.28.1"
